--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
  <head> 
-  <title>v1ll4n.007</title> 
+  <title>VILLIAN CR7</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link href="https://fonts.googleapis.com/css?family=Pacifico|Permanent+Marker|Courgette|Berkshire+Swash|Cookie|Damion|Homemade+Apple|Italianno|Itim|Leckerli+One|Marck+Script|Merienda|Mr+Dafoe|Norican|Parisienne|Montserrat|Prompt|Charm" rel="stylesheet"> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css"> 
@@ -25,7 +25,7 @@
    </div> 
    <div class="social"> 
     <span><a href="http://wa.me/+994402330145text=Nice+to+meet+you+bro"><i class="fab fa-whatsapp"></i></a></span> 
-    <span><a href=""><i class="fab fa-instagram"></i></a></span> 
+    
     <span><a href="https://github.com/Iam-Sreejith"><i class="fab fa-github"></i></a></span> 
    </div> 
    <center> 
