--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="https://b.top4top.io/p_21463j6gs0.png" alt="avatar"> 
    </div> 
    <div class="data"> 
-    <span class="name">v1ll4n.007</span> 
+    <span class="name">VILLIAN CR7</span> 
     <span class="desg">Sreejith </span> 
     <span class="tag">Cyber security Enthusiast || Ethical Hacker || CTF Player || Bug Hunter || Network Forensic Researcher </span> 
    </div> 
@@ -41,7 +41,7 @@
     <script src="https://tryhackme.com/badge/708209"></script> 
    </center> 
   </div> 
-  <span class="typewriter" style="font-size: 12px;"><p style="color:green;">┌─[root@villan]─[~] <br>└──╼ #&nbsp;<a href="" class="typewrite" style="color: white !important;" data-period="2000" data-type="[ &quot;what we will do tomorrow, Requires us to think about the present, Not the past. !&quot;]"><span class="wrap">sysinfo</span> <script>
+  <span class="typewriter" style="font-size: 12px;"><p style="color:green;">┌─[root@villian]─[~] <br>└──╼ #&nbsp;<a href="" class="typewrite" style="color: white !important;" data-period="2000" data-type="[ &quot;what we will do tomorrow, Requires us to think about the present, Not the past. !&quot;]"><span class="wrap">sysinfo</span> <script>
         var TxtType = function(el, toRotate, period) {
         this.toRotate = toRotate;
         this.el = el;
