--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
  <head>
 
-  <title>VILLIAN CR7</title> 
+  <title>PROFESSOR</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link href="https://fonts.googleapis.com/css?family=Pacifico|Permanent+Marker|Courgette|Berkshire+Swash|Cookie|Damion|Homemade+Apple|Italianno|Itim|Leckerli+One|Marck+Script|Merienda|Mr+Dafoe|Norican|Parisienne|Montserrat|Prompt|Charm" rel="stylesheet"> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css"> 
@@ -21,7 +21,7 @@
     <img src="https://b.top4top.io/p_21463j6gs0.png" alt="avatar"> 
    </div> 
    <div class="data"> 
-    <span class="name">VILLIAN CR7</span> 
+    <span class="name">PROFESSOR</span> 
     <span class="desg">Sreejith </span> 
     <span class="tag">Cyber security Enthusiast || Ethical Hacker || CTF Player || Bug Hunter || Network Forensic Researcher </span> 
    </div> 
