--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
  <head>
 
-  <title>PROFESSOR</title> 
+  <title>I'm Alexander</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link href="https://fonts.googleapis.com/css?family=Pacifico|Permanent+Marker|Courgette|Berkshire+Swash|Cookie|Damion|Homemade+Apple|Italianno|Itim|Leckerli+One|Marck+Script|Merienda|Mr+Dafoe|Norican|Parisienne|Montserrat|Prompt|Charm" rel="stylesheet"> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css"> 
@@ -21,7 +21,7 @@
     <img src="https://b.top4top.io/p_21463j6gs0.png" alt="avatar"> 
    </div> 
    <div class="data"> 
-    <span class="name">PROFESSOR</span> 
+    <span class="name">Alexander</span> 
     <span class="desg">Sreejith </span> 
     <span class="tag">Cyber security Enthusiast || Ethical Hacker || CTF Player || Bug Hunter || Network Forensic Researcher </span> 
    </div> 
@@ -43,7 +43,7 @@
     <script src="https://tryhackme.com/badge/708209"></script> 
    </center> 
   </div> 
-  <span class="typewriter" style="font-size: 12px;"><p style="color:green;">┌─[root@villian]─[~] <br>└──╼ #&nbsp;<a href="" class="typewrite" style="color: white !important;" data-period="2000" data-type="[ &quot;what we will do tomorrow, Requires us to think about the present, Not the past. !&quot;]"><span class="wrap">sysinfo</span> <script>
+  <span class="typewriter" style="font-size: 12px;"><p style="color:green;">┌─[root@Alexàñd34]─[~] <br>└──╼ #&nbsp;<a href="" class="typewrite" style="color: white !important;" data-period="2000" data-type="[ &quot;what we will do tomorrow, Requires us to think about the present, Not the past. !&quot;]"><span class="wrap">sysinfo</span> <script>
         var TxtType = function(el, toRotate, period) {
         this.toRotate = toRotate;
         this.el = el;
