--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <label class="switch"> <input type="checkbox" onchange="toggle(this)"> <span class="slider"></span> </label> 
    </div> 
    <div class="img"> 
-    <img src="https://b.top4top.io/p_21463j6gs0.png" alt="avatar"> 
+   <img src="https://i.ibb.co/sHS6TPG/Pics-Art-12-20-08-57-56.png" alt="avatar">
    </div> 
    <div class="data"> 
     <span class="name">Alexander</span> 
